# merlin

./: .env.example  .gitignore  README.md  pyproject.toml
src/merlin/: __init__.py  config.py  ratelimit.py
src/merlin/cli/: main.py
src/merlin/clients/: acousticbrainz.py  lastfm.py  listenbrainz.py  musicbrainz.py  ytmusic.py
src/merlin/core/: engine.py  features.py  fusion.py  models.py  resolver.py
src/merlin/db/: __init__.py  database.py  schema.py
src/merlin/service/: app.py  scheduler.py
tests/: test_core.py  test_features.py  test_fusion.py  test_ratelimit.py  test_resolver.py  test_sync.py
