[project]
name = "merlin"
version = "0.1.0"
description = "Hybrid 'Start Radio' / 'Similar Tracks' engine for YouTube Music"
readme = "README.md"
authors = [
    { name = "neriumpete", email = "pavlovskipetko@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    # YouTube Music front
    "ytmusicapi>=1.10.0",
    # Web service + CLI (same family, by design)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    # HTTP + resilience
    "httpx[http2]>=0.28.0",
    "tenacity>=9.0.0",
    # NB: a thread-safe token bucket (merlin.ratelimit) is used instead of
    # aiolimiter — the client stack is synchronous, so async limiting won't fit.
    # Scheduling
    "apscheduler>=3.11.0",
    # Models / config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Music metadata + similarity sources
    "musicbrainzngs>=0.7.1",
    "pylast>=5.3.0",
    # Persistence + vectors + matching
    "aiosqlite>=0.20.0",
    "sqlite-vec>=0.1.6",
    "numpy>=2.1.0",
    "rapidfuzz>=3.10.0",
    # Secrets
    "keyring>=25.5.0",
]

[project.optional-dependencies]
# Phase 5: local audio feature extraction. Heavy, platform-fussy, opt-in only.
audio = [
    "librosa>=0.10.2",
    "pyacoustid>=1.3.0",
]
# essentia intentionally NOT listed here — no reliable wheels on 3.13/macOS-arm.
# Install manually if you go down the local-extraction road.

[project.scripts]
merlin = "merlin.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
